# PySL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
data/: profile.json
docs/: ARQUITECTURA.md  SINTAXIS.md
legacy/web-original/: Pagina Principal.html  bad.html  ejercicio.html  imagenes.html  iniciarsecion.html  juego.html  perfil.html
scripts/: build_windows.ps1
src/pysl/: __init__.py  app.py
src/pysl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pysl/core/: database.py  session.py  settings.py
src/pysl/language/: __init__.py  executor.py  transpiler.py
src/pysl/modules/about/: about_view.py
src/pysl/modules/authentication/: login_view.py  service.py
src/pysl/modules/converter/: converter_view.py  service.py
src/pysl/modules/course/: __init__.py  course_view.py
src/pysl/modules/dashboard/: dashboard_view.py
src/pysl/modules/docs/: docs_view.py
src/pysl/modules/editor/: code_editor.py  editor_view.py  highlighter.py
src/pysl/modules/gallery/: gallery_view.py
src/pysl/modules/games/: games_view.py
src/pysl/modules/home/: home_view.py
src/pysl/modules/profile/: profile_view.py
src/pysl/modules/settings/: __init__.py  settings_view.py
src/pysl/runtime/: __init__.py  console.py  io.py
src/pysl/ui/: __init__.py  main_window.py  styles.py
tests/: test_authentication_service.py  test_converter.py  test_database.py  test_executor.py  test_games_v1.py  test_hangman_service.py  test_language_v1.py  test_runtime_io.py  test_smallest_even_service.py  test_transpiler.py
(+8 files in other folders)
